# demos

./: BUILD.bazel  README.md
examples/assignment/: main.go
examples/buildkite_metric/: BUILD.bazel  go.mod  go.sum  handler.go
examples/distribution/: main.go
examples/gauge/: main.go
examples/google_cloud_function/: function.go  function_test.go  go.mod  go.sum
